--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Swagger UI</title>
+    <title>appfleet API Documentation</title>
+    <meta name="description" content="API to deploy docker containers to the edge.">
     <link rel="stylesheet" type="text/css" href="./swagger-ui.css" >
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
